fix header overlapping

--- a/faq-accordion-card-main/scss/main.scss
+++ b/faq-accordion-card-main/scss/main.scss
@@ -17,7 +17,7 @@ body {
 
 main {
   min-height: 95vh;
-  padding: 10em 3em 3em;
+  padding: 11em 3em 3em;
   display: flex;
   justify-content: center;
   align-items: center;
